crates/next-custom-transforms/tests/errors/server-actions/server-graph/17/input.js
export async function foo() {
  'use cache: x'

  return 'data'
}
